--- a/calendar.html
+++ b/calendar.html
@@ -279,6 +279,7 @@ function toTimestamp(dateStr, timeStr) {
 }
 
 // Handle Multi-day Booking
+// Handle Multi-day Booking (fixed)
 async function handleMultiDayBooking() {
   const selectedVehicle = vehicleSelect.value;
   if (!selectedVehicle) {
@@ -307,43 +308,41 @@ async function handleMultiDayBooking() {
   const bookingsToCreate = [];
 
   while (currentDate <= endDate) {
-  const dayOfWeek = currentDate.getDay();
-  console.log(`Checking date: ${currentDate.toLocaleDateString()}, dayOfWeek: ${dayOfWeek}`);
+    const dayOfWeek = currentDate.getDay();
+    console.log(`Checking date: ${currentDate.toLocaleDateString()}, dayOfWeek: ${dayOfWeek}`);
 
-  if (dayOfWeek >= 1 && dayOfWeek <= 5) { // Monday (1) to Friday (5)
-    const dateStr = currentDate.getFullYear() + '-' +
-                    String(currentDate.getMonth() + 1).padStart(2, '0') + '-' +
-                    String(currentDate.getDate()).padStart(2, '0');
+    if (dayOfWeek >= 1 && dayOfWeek <= 5) { // Monday (1) to Friday (5)
+      const dateStr = currentDate.getFullYear() + '-' +
+                      String(currentDate.getMonth() + 1).padStart(2, '0') + '-' +
+                      String(currentDate.getDate()).padStart(2, '0');
 
-    const startTS = toTimestamp(dateStr, startTimeVal);
-    const endTS = toTimestamp(dateStr, endTimeVal);
+      const startTS = toTimestamp(dateStr, startTimeVal);
+      const endTS = toTimestamp(dateStr, endTimeVal);
 
-    if (endTS <= startTS) {
-      alert(`End time must be after start time on ${dateStr}!`);
-      return;
+      if (endTS <= startTS) {
+        alert(`End time must be after start time on ${dateStr}!`);
+        return;
+      }
+
+      const conflict = await isBookingOverlapping(selectedVehicle, startTS, endTS);
+      if (conflict) {
+        alert(`Conflict detected on ${dateStr}. Booking aborted.`);
+        return;
+      }
+
+      bookingsToCreate.push({
+        userName: currentUser.email,
+        date: dateStr,
+        startTime: startTimeVal,
+        endTime: endTimeVal,
+        startTimeISO: new Date(startTS).toISOString(),
+        endTimeISO: new Date(endTS).toISOString()
+      });
+    } else {
+      console.log(`Skipped date (weekend): ${currentDate.toLocaleDateString()}, dayOfWeek: ${dayOfWeek}`);
     }
 
-    const conflict = await isBookingOverlapping(selectedVehicle, startTS, endTS);
-    if (conflict) {
-      alert(`Conflict detected on ${dateStr}. Booking aborted.`);
-      return;
-    }
-
-    bookingsToCreate.push({
-      userName: currentUser.email,
-      date: dateStr,
-      startTime: startTimeVal,
-      endTime: endTimeVal,
-      startTimeISO: new Date(startTS).toISOString(),
-      endTimeISO: new Date(endTS).toISOString()
-    });
-  } else {
-    console.log(`Skipped date (weekend): ${currentDate.toLocaleDateString()}, dayOfWeek: ${dayOfWeek}`);
-  }
-  
-  currentDate.setDate(currentDate.getDate() + 1);
-}
-
+    currentDate.setDate(currentDate.getDate() + 1);
   }
 
   if (bookingsToCreate.length === 0) {
@@ -358,7 +357,8 @@ async function handleMultiDayBooking() {
 
   alert('All bookings created successfully!');
   calendar.refetchEvents();
-}
+} // <--- make sure this closing brace matches the while loop and function scope
+
 
 // handleSignOutVehicle
 async function handleSignOutVehicle(paramVehicle = null) {
