--- a/calendar.html
+++ b/calendar.html
@@ -82,28 +82,30 @@
     </select>
   </div>
 
-  <form id="booking-form">
+ <form id="booking-form">
   <div class="form-row">
-    <label>Start Date (Mon-Fri):
+    <label>
+      Start Date (Mon-Fri):
       <input type="date" id="booking-start-date" required>
     </label>
-
-    <label>End Date (optional, Mon-Fri):
+    <label>
+      End Date (optional, Mon-Fri):
       <input type="date" id="booking-end-date">
     </label>
   </div>
 
   <div class="form-row">
-    <label>Start Time:
+    <label>
+      Start Time:
       <input type="text" id="booking-start-time" required>
     </label>
-
-    <label>End Time:
+    <label>
+      End Time:
       <input type="text" id="booking-end-time" required>
     </label>
   </div>
 
-  <button id="bookVehicleBtn">Book Vehicle</button>
+  <button id="bookVehicleBtn" class="action-button">Book Vehicle</button>
 </form>
 
 <!--
