--- a/calendar.html
+++ b/calendar.html
@@ -395,28 +395,32 @@ if (returnVehicleBtn) {
 
   const events = [];
 
-  // Regular bookings
+  // Regular bookings — make end exclusive but visually inclusive by adding +1 day
   if (bookingsSnap.exists()) {
     const bookings = bookingsSnap.val();
     for (const bookingId in bookings) {
       const b = bookings[bookingId];
+
+      const end = new Date(b.endTimeISO);
+      end.setDate(end.getDate() + 1);  // Inclusive fix
+
       events.push({
         id: bookingId,
         title: `${b.startTime}-${b.endTime}`,
         start: new Date(b.startTimeISO),
-        end: new Date(b.endTimeISO),
+        end: end, // inclusive end
         extendedProps: { creatorEmail: b.userName }
       });
     }
   }
 
-  // Ghost notes — visible to all, editable only by admin
+  // Ghost notes — already visible to all, just display inclusively
   if (notesSnap.exists()) {
     const notes = notesSnap.val();
     for (const noteId in notes) {
       const n = notes[noteId];
       const end = new Date(n.endDate || n.startDate);
-      end.setDate(end.getDate() + 1);  // Make end inclusive
+      end.setDate(end.getDate() + 1); // Make inclusive
 
       events.push({
         id: noteId,
