--- a/calendar.html
+++ b/calendar.html
@@ -397,22 +397,19 @@ if (returnVehicleBtn) {
 
   // Regular bookings — make end exclusive but visually inclusive by adding +1 day
   if (bookingsSnap.exists()) {
-    const bookings = bookingsSnap.val();
-    for (const bookingId in bookings) {
-      const b = bookings[bookingId];
+  const bookings = bookingsSnap.val();
+  for (const bookingId in bookings) {
+    const b = bookings[bookingId];
 
-      const end = new Date(b.endTimeISO);
-      end.setDate(end.getDate() + 1);  // Inclusive fix
-
-      events.push({
-        id: bookingId,
-        title: `${b.startTime}-${b.endTime}`,
-        start: new Date(b.startTimeISO),
-        end: end, // inclusive end
-        extendedProps: { creatorEmail: b.userName }
-      });
-    }
+    events.push({
+      id: bookingId,
+      title: `${b.startTime}-${b.endTime}`,
+      start: new Date(b.startTimeISO),
+      end: new Date(b.endTimeISO), // do NOT add +1 day
+      extendedProps: { creatorEmail: b.userName }
+    });
   }
+}
 
   // Ghost notes — already visible to all, just display inclusively
   if (notesSnap.exists()) {
